--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 a {
-	color: #0059b2;
+	color: #7759b2;
 	text-decoration: none;
 }
 a:hover {
@@ -16,7 +16,8 @@ a:hover {
 	text-decoration: underline;
 }
 
-.clear {clear: both;}
+.clear {clear: both;
+}
 
 ul.mainmenu {
 	list-style: none;
