--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link type="text/css"  href="{{ url_for('static',filename='css/styles.css') }}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 {% block title -%}
     {% if title %}
     <title> Блог о танго - {{title}}</title>
@@ -13,6 +14,7 @@
     {% endblock %}
 </head>
 <body>
+
 {% block content -%}
 {%- block mainmenu -%}
 <ul class="mainmenu" >
@@ -26,8 +28,11 @@
 
     <div class="clear"></div>
     <div class="content">
+
 {% if title -%}
+        <div class="container mt-5">
 <h1>{{title}}</h1>
+            </div>
 {% else -%}
 <h1>Блог о танго</h1>
 {% endif %}
