--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 
 {% block content %}
 {{ super () }}
-{{ post | safe }}
+<div class="container mt-5">
+
+<div class="alert alert-info">
+<p>{{post}}</p>
+</div>
+  <a href="post/url" alias="url" class="btn btn-danger">Удалить </a>
+ <a href="/post{{ post.alias }}/update" class="btn btn-success">Редактировать </a>
+</div>
 {% endblock %}
+
+
