--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -5,13 +5,13 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{cat}}"> {{ msg }}</div>
 {% endfor %}
-<form action="{{url_for('addPost')}}" class="form-contact" method="post">
+<form action="{{url_for('add_post')}}" class="form-contact" method="post">
     <p><label>Название статьи: </label> <input type="text" name="name" placeholder="Введите название" value=""
                                                required/>
     <p><label>Анонс статьи: </label> <input type="text" name="intro" placeholder="Введите короткий анонс" value=""
                                             required/>
     <p><label>URL статьи: </label> <input type="text" name="url" placeholder="Введите URL" value=""
-                                            required/>
+                                          required/>
     <p><label>Текст статьи: </label>
     <p><textarea name="post" rows=7 cols=40 > </textarea>
     <p><input type="submit" value="Добавить"/>
